# BP-face-recognition

./: .gitignore  .thesis-overleaf.json.example  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_CONTEXT.md  Makefile  PROGRESS.md  QUICK_REFERENCE.md  README.md  RECOVERY_PLAN.md  SESSION_REPORT_2026_01_19.md  TODO.md  Thesis.md  noxfile.py  pyproject.toml
.maintenance/: CLOSED_SET_PLAN.md  CROSS_VALIDATION_PLAN.md  EXPERIMENTS.md  IMPLEMENTATION_PLAN_FACENET_PIPELINE.md  MAXIMUM_IMPACT_PLAN.md  PROGRESS.md  REPO_CLEANUP_SUMMARY.md  RUNTIME_TEST_PLAN.md  SESSION_14_SUMMARY.md  SESSION_15_PLAN.md  SESSION_17_PLAN.md  THESIS_CHAPTER_STRUCTURE.md  TODO.md
LaTeX/: analytical.tex  appendices.tex  appendixa.tex  appendixb.tex  appendixc.tex  bib1.bib  bibliography.tex  conclusion.tex  feidippp.cls  feidippp.tex  feidipsp.cls  feidipsp.tex  introduction.tex  literature_review.tex  mainpart.tex  problemexpres.tex  tukediphc.cls  tukethesis.cls  tukethesis.tex
config/: models.yaml
data/: face_detection_results.csv  face_detection_results_0.csv  faces.csv  method_evaluation.md  training_history.json  training_seccam.csv  training_webcam.csv
experiments/: __init__.py  dataset_loader.py  interfaces.py  recognition_service.py  train.py
notebooks/: CreateDatasets.ipynb  DeepLearning.ipynb  FaceDetection.ipynb  Preprocessing.ipynb  README.md
pipeline/: assemble_master.py  audit_citations.py  build_citation_aliases.py  concat_chapters.py  extract_mermaid.py  fix_image_paths.lua  preprocess_citations.py  setup_overleaf.py  test_extract_mermaid.py  test_preprocess_citations.py
results/: cross_validation.json  cross_validation_report.md  detection_eval_report.md  detection_results_groundtruth.json  embedding_quality.json  recognition_results.json  (+5 more)
(+7843 files in other folders)
