[project]
name = "bp-face-recognition"
version = "0.1.0"
description = "Face Recognition Using Surveillance Systems - Bachelor Thesis Project"
authors = [
    {name = "Yurii Murha", email = "yurii.murha@student.tuke.sk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "tensorflow>=2.10.0",
    "opencv-python>=4.8.0",
    "mtcnn>=0.1.0",
    "face-recognition>=1.3.0",
    "psycopg2>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.20.0,<2.0.0",
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "dlib",
    "shapely>=2.0.0",
    "tabulate>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipykernel>=6.0.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # key for src-layout

[tool.uv.sources]
dlib = { path = "./wheels/dlib-19.24.1-cp311-cp311-win_amd64.whl" }

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
namespace_packages = true
# explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "tensorflow.*",
    "mtcnn.*",
    "psycopg2.*",
    "pandas.*",
    "numpy.*",
    "albumentations.*",
    "matplotlib.*",
    "tqdm.*",
    "sklearn.*",
    "dlib.*",
    "face_recognition.*",
    "shapely.*",
    "keras.*",
    "bp_face_recognition.models.methods.*"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "nox",
]
